test/expected/escape_correct_offset.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "[d]**"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "[d]*"
  Literal "*"
]
shit: 2:6: error: the glob pattern '[d]**' matched no file, it expands to its literal text, which is rarely intended. Probe for matches with compgen -G '[d]**' or relax with set +o failglob.
     2 |  echo [d]*\*
       |       ^~~~~~ here.
